# vllm-image-text

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  test_direct_vllm.py
app/: Dockerfile  benchmark.py  config.py  image_utils.py  logging_config.py  main.py  requirements.txt  schemas.py  vllm_client.py
tests/: test_config.py  test_image_utils.py  test_schemas.py  test_vllm_client.py
